--- a/ProgrammingPractice/ProgrammingPractice.csproj
+++ b/ProgrammingPractice/ProgrammingPractice.csproj
@@ -207,10 +207,12 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\JavaScriptWorker.cs" />
     <Compile Include="Services\WebConfigurationPropertyService.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Images\FillGaugeError.png" />
     <Content Include="Content\StyleSheets\bootstrap-theme.css" />
     <Content Include="Content\StyleSheets\bootstrap-theme.min.css" />
     <Content Include="Content\StyleSheets\bootstrap.css" />
@@ -221,6 +223,7 @@
     <Content Include="Content\StyleSheets\Site.css" />
     <Content Include="Scripts\App\MultiThread.js" />
     <None Include="Scripts\Library\JQuery\jquery-2.2.4.intellisense.js" />
+    <Content Include="Scripts\App\Site.js" />
     <Content Include="Scripts\Library\JQuery\jquery-2.2.4.js" />
     <Content Include="Scripts\Library\JQuery\jquery-2.2.4.min.js" />
     <Content Include="Scripts\Library\BootStrap\bootstrap.js" />
@@ -289,7 +292,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Content\Images\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
