Removed code for dynamically updating UI (too complex at the moment).  Added cancelation operations.  Added a Client ID field held by the browser on window.load.

--- a/ProgrammingPractice.Data/ProgrammingPractice.Data.csproj
+++ b/ProgrammingPractice.Data/ProgrammingPractice.Data.csproj
@@ -47,9 +47,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ProgrammingPractice.ErrorHandling\ProgrammingPractice.ErrorHandling.csproj">
+    <ProjectReference Include="..\ProgrammingPractice.ErrorHandling\ProgrammingPractice.Error.csproj">
       <Project>{dfb16f4b-6000-46db-8c9f-a72befc61e8a}</Project>
-      <Name>ProgrammingPractice.ErrorHandling</Name>
+      <Name>ProgrammingPractice.Error</Name>
     </ProjectReference>
     <ProjectReference Include="..\ProgrammingPractice.Interfaces\ProgrammingPractice.Interfaces.csproj">
       <Project>{b65e72f9-396d-47f2-a2e7-6effc8261356}</Project>
