--- a/ProgrammingPractice.ErrorHandling/ProgrammingPractice.Error.csproj
+++ b/ProgrammingPractice.ErrorHandling/ProgrammingPractice.Error.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{DFB16F4B-6000-46DB-8C9F-A72BEFC61E8A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ProgrammingPractice.ErrorHandling</RootNamespace>
-    <AssemblyName>ProgrammingPractice.ErrorHandling</AssemblyName>
+    <RootNamespace>ProgrammingPractice.Error</RootNamespace>
+    <AssemblyName>ProgrammingPractice.Error</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
@@ -35,6 +35,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -44,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ErrorService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
