--- a/ProgrammingPractice.UI.MVC/Web.config
+++ b/ProgrammingPractice.UI.MVC/Web.config
@@ -28,6 +28,7 @@
     <add key="ExceptionDomainStackTrace" value="DomainStackTrace"/>
     <add key="ExceptionLogSource" value="BgmCollaboration"/>
     <add key="ExceptionLogId" value="1026"/>
+    <add key="WorkLoadAmount" value="30"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
