--- a/ProgrammingPractice.Interfaces/ProgrammingPractice.Interfaces.csproj
+++ b/ProgrammingPractice.Interfaces/ProgrammingPractice.Interfaces.csproj
@@ -44,6 +44,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IApplicationSettings.cs" />
+    <Compile Include="IMultiThreadFacade.cs" />
+    <Compile Include="IMultiThreadService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
