--- a/ProgrammingPractice.Service/ProgrammingPractice.Service.csproj
+++ b/ProgrammingPractice.Service/ProgrammingPractice.Service.csproj
@@ -35,7 +35,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -50,6 +49,10 @@
     <Compile Include="WebService.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ProgrammingPractice.Configuration\ProgrammingPractice.Configuration.csproj">
+      <Project>{f8b86b29-a80d-4f62-b944-35fafa5f654a}</Project>
+      <Name>ProgrammingPractice.Configuration</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ProgrammingPractice.Error\ProgrammingPractice.Error.csproj">
       <Project>{dfb16f4b-6000-46db-8c9f-a72befc61e8a}</Project>
       <Name>ProgrammingPractice.Error</Name>
