--- a/Tests/Services/ProgrammingPractice.Tests.Services/ProgrammingPractice.Tests.Services.csproj
+++ b/Tests/Services/ProgrammingPractice.Tests.Services/ProgrammingPractice.Tests.Services.csproj
@@ -4,17 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{10A67A8A-492E-44E1-9B1D-E62B8149BC04}</ProjectGuid>
+    <ProjectGuid>{BDC93290-14BC-42D0-B624-A9EDBA7F6903}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ProgrammingPractice.Model</RootNamespace>
-    <AssemblyName>ProgrammingPractice.Model</AssemblyName>
+    <RootNamespace>ProgrammingPractice.Tests.Services</RootNamespace>
+    <AssemblyName>ProgrammingPractice.Tests.Services</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SccProjectName>SAK</SccProjectName>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccProvider>SAK</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -34,6 +30,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,26 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MultiThreadFacade.cs" />
+    <Compile Include="PerformanceService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\ProgrammingPractice.Configuration\ProgrammingPractice.Configuration.csproj">
-      <Project>{f8b86b29-a80d-4f62-b944-35fafa5f654a}</Project>
-      <Name>ProgrammingPractice.Configuration</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ProgrammingPractice.Data\ProgrammingPractice.Data.csproj">
-      <Project>{d8786fa8-dd42-43a4-b1cf-02d99bea2985}</Project>
-      <Name>ProgrammingPractice.Data</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ProgrammingPractice.Error\ProgrammingPractice.Error.csproj">
-      <Project>{dfb16f4b-6000-46db-8c9f-a72befc61e8a}</Project>
-      <Name>ProgrammingPractice.Error</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ProgrammingPractice.Interfaces\ProgrammingPractice.Interfaces.csproj">
-      <Project>{b65e72f9-396d-47f2-a2e7-6effc8261356}</Project>
-      <Name>ProgrammingPractice.Interfaces</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
